# research-analytics

./: .gitignore  README.md  config.py  setup_research.sh
researches/playstation-store/: README.md  pyproject.toml
researches/playstation-store/data/: ps-store-games.csv
researches/playstation-store/notebooks/: research.ipynb
researches/playstation-store/src/: config.py  get_details.py  get_games.py
researches/tg-analytics-channels/: README.md  pyproject.toml
researches/tg-analytics-channels/data/: console.sql
researches/tg-analytics-channels/notebooks/: research.ipynb
researches/tg-analytics-channels/src/: console.sql  get_comments.py  get_posts.py  get_subscribers.py  main.py  models.py  parsers.py  test.py  tg_parser.py
