[project]
name = "playstation-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "pandas>=2.2.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "matplotlib>=3.10.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
    "nbformat>=5.10.4",
    "kaleido>=1.3.0",
]
