[project]
name = "tg-analytics-channels"
version = "0.1.0"
description = "Аналитическое исследование"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "asyncio>=4.0.0",
    "jupyter",
    "pandas",
    "plotly",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "telethon>=1.40.0",
    "tqdm>=4.67.1",
]
